# Prime

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
Prime/: .classpath  .project  pom.xml
Prime/jogamp-all-platforms/: aggregated.artifact.properties.sorted  all.artifact.properties.sorted  gluegen.artifact.properties  joal.README.txt  joal.artifact.properties  jocl.artifact.properties  jogl.README.txt  jogl.artifact.properties
Prime/jogamp-all-platforms/apk/: gluegen-rt-android-armeabi.apk  joal-android-armeabi.apk  joal-test-android.apk  jocl-armeabi.apk  jogamp-android-launcher.apk  jogl-all-android-armeabi.apk  jogl-test-android.apk
Prime/jogamp-all-platforms/apk/unsigned/: gluegen-rt-android-armeabi.apk  joal-android-armeabi.apk  joal-test-android.apk  jocl-armeabi.apk  jogamp-android-launcher.apk  jogl-all-android-armeabi.apk  jogl-test-android.apk
Prime/jogamp-all-platforms/jnlp-files/: jogl-applet-bug818_gljpanel01.html
Prime/jogamp-all-platforms/lib/macosx-universal/: libjogl_mobile.jnilib  libnewt.jnilib
Prime/src/prime/core/: Camera.java  Drawable.java  PathTracer.java  RandomSampler.java  Renderer.java  Sampler.java  Scene.java  SceneGraph.java  StratifiedSampler.java
Prime/src/prime/gui/: MainGUI.java  MainGui.java
Prime/src/prime/math/: ConeFilter.java  Filter.java  GaussianFilter.java  LHCoordinateSystem.java  Mat3.java  MathTools.java  MathUtils.java  Matrix.java  Point2.java  Transformable.java  Tuple3.java  Vec2i.java  Vec3.java  Vec3f.java  Vec3i.java  Vector.java
Prime/src/prime/model/: BoundingBox.java  Geometry.java  RayBoxIntInfo.java  RayIntersectionInfo.java  RayTriHitInfo.java  RayTriIntInfo.java  Triangle.java  TriangleMesh.java
Prime/src/prime/photonmap/: KDTree.java  KdTree.java  Photon.java
Prime/src/prime/physics/: BSDF.java  Color3f.java  IdealDiffuseModel.java  IdealSpecularModel.java  Material.java  MicrofacetDistribution.java  OrenNayerModel.java  PhongModel.java  Ray.java  SchlickModel.java  Sky.java  SparrowTorranceModel.java  Spectrum.java
Prime/src/prime/spatial/: KdTree.java  NaiveStructure.java  SpatialStructure.java  UniformGrid.java
Prime/src/prime/util/: ContentLoader.java  ModelFileLoader.java
assets/: bunny_buddha.ron  demo.ron
crates/prime-cli/: Cargo.toml
crates/prime-cli/src/: main.rs
crates/prime-core/: Cargo.toml
crates/prime-core/benches/: render.rs
crates/prime-core/src/: aabb.rs  bvh.rs  camera.rs  color.rs  demo.rs  desc.rs  env.rs  framebuffer.rs  hit.rs  integrator.rs  lib.rs  material.rs  obj.rs  ray.rs  sampler.rs  scene.rs  texture.rs
crates/prime-core/src/geometry/: mod.rs  sphere.rs  triangle.rs
crates/prime-core/src/math/: mod.rs  onb.rs  sampling.rs  vec3.rs
crates/prime-cuda/: Cargo.toml
crates/prime-cuda/src/: lib.rs  main.rs  serve.rs  viewer.html
crates/prime-cuda/src/kernels/: pathtrace.cu  render.cu  trace.cu
crates/prime-gltf/: Cargo.toml
crates/prime-gltf/src/: lib.rs
crates/prime-serve/: Cargo.toml
crates/prime-serve/src/: index.html  loader.rs  main.rs  render.rs
legacy-java/Prime/src/prime/core/: Camera.java  Drawable.java  PathTracer.java  Renderer.java  Scene.java
legacy-java/Prime/src/prime/gui/: MainGui.java
legacy-java/Prime/src/prime/math/: ConeFilter.java  Filter.java  GaussianFilter.java  LHCoordinateSystem.java  Mat3.java  MathUtils.java  Transformable.java  Vec3f.java  Vec3i.java
legacy-java/Prime/src/prime/model/: BoundingBox.java  Geometry.java  RayBoxIntInfo.java  RayTriHitInfo.java  Triangle.java
legacy-java/Prime/src/prime/photonmap/: Photon.java
legacy-java/Prime/src/prime/physics/: Color3f.java  IdealSpecularModel.java  MicrofacetDistribution.java  Ray.java
legacy-java/Prime/src/prime/spatial/: KdTree.java  NaiveStructure.java  SpatialStructure.java  UniformGrid.java
legacy-java/Prime/src/prime/util/: ContentLoader.java
