[package]
name = "prime-gltf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "glTF / GLB scene loader for the Prime path tracer"

[dependencies]
prime-core.workspace = true
gltf = "1"
thiserror.workspace = true
