[package]
name = "prime-serve"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Interactive web viewer for the Prime path tracer (progressive rendering in the browser)"

[[bin]]
name = "prime-serve"
path = "src/main.rs"

[dependencies]
prime-core = { workspace = true, features = ["serde"] }
tiny_http.workspace = true
serde.workspace = true
serde_json.workspace = true
image.workspace = true
clap.workspace = true
anyhow.workspace = true
ron.workspace = true
